# PyCrypto

./: .gitignore  README.md  main.py  pyproject.toml
Utils/: AES.py  Init.py  Store.py
gui/: index.html
gui/css/: style.css
